# nod

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  windows-exe.yml
.project/: README.md  artifacts.md  attempts.md  decisions.md  goals.md  ideas.md  learnings.md  next-actions.md  questions.md  theories.md  workstreams.md
.project/sessions/: 2026-06-09-1241-session.md
agent-skills/: README.md
agent-skills/nod-bootstrap/: SKILL.md
agent-skills/nod-bootstrap/references/: bootstrap-workflow.md
agent-skills/nod-notification-author/: SKILL.md
agent-skills/nod-notification-author/references/: payload-examples.md  request-contract.md  validation-and-privacy.md
client/: .gitignore  LICENSE  README.md
client/nod-apple/: .gitignore  AGENTS.md  Package.swift  README.md
client/nod-apple/Apps/NodIOS/: NodIOSApp.swift
client/nod-apple/Apps/NodMac/: NodMacApp.swift
client/nod-apple/Apps/Shared/: AppBuildInfo.swift  DeviceManagementSheet.swift  EventDetailView.swift  EventListViews.swift  EventMediaViews.swift  MarkdownText.swift  NodRootViews.swift  RegistrationView.swift  RequestDetailView.swift  RequestListViews.swift  RequestMediaViews.swift  SubscriptionSheet.swift
client/nod-apple/Nod.xcodeproj/: project.pbxproj
client/nod-apple/Sources/NodKit/: KeychainStore.swift  Models.swift  NodAPI.swift  NodAppAttestation.swift  NodEventInbox.swift  NodJSON.swift  NodMarkdownParser.swift  NodNotificationPolicy.swift  NodRequestInbox.swift  NodRuntimeClient.swift  NodRuntimeState.swift  NodServerAddress.swift  (+10 more)
client/nod-apple/docs/: APPLE.md
client/nod-apple/scripts/: appstore-build-compliance  build-macos-app  build-nod-client-ffi.sh  build-nod-proto-ffi.sh  release-macos  testflight-ios
client/nod-client-core/: Cargo.toml
client/nod-client-core/src/: api.rs  lib.rs  main.rs  models.rs  runtime.rs  signing.rs  state.rs  store.rs
client/nod-client-core/src/runtime/: rpc.rs  session.rs  sync.rs  workflows.rs
client/nod-desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/nod-desktop/scripts/: build-windows-exe  check-drift.mjs
client/nod-desktop/src/: App.tsx  commands.ts  domain.test.ts  domain.ts  events.ts  main.tsx  styles.css  types.ts
client/nod-desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/nod-desktop/src-tauri/capabilities/: default.json
client/nod-desktop/src-tauri/icons/: icon.icns
client/nod-desktop/src-tauri/src/: badge.rs  commands.rs  desktop_state.rs  external_url.rs  lib.rs  main.rs  notifier.rs  runtime_events.rs  runtime_messages.rs  tray.rs  window.rs
client/nod-desktop/src-tauri/src/notifier/: actions.rs  options.rs  windows_toast.rs
client/nod-desktop/src-tauri/src/notifier/platform/: linux.rs  mod.rs  unsupported.rs  windows.rs
client/nod-tui/: Cargo.toml  README.md
client/nod-tui/src/: alerts.rs  app.rs  domain.rs  main.rs  runtime_bridge.rs  smoke_test.rs  terminal.rs  test_support.rs  ui.rs
client/nod-tui/src/app/: action_text.rs  enrollment.rs  focus.rs  navigation.rs  option_text.rs  rename_device.rs  settings.rs  text_input.rs
client/nod-tui/src/runtime_bridge/: adapter.rs  command.rs  executor.rs  port.rs  tests.rs
client/nod-tui/src/ui/: format.rs  layout.rs  modals.rs  panes.rs  tests.rs
docs/: deploy.md  release-checklist.md
docs/release-notes/: v1.0.0.md
nod-client-ffi/: Cargo.toml
nod-client-ffi/src/: lib.rs  runtime.rs
nod-proto/: Cargo.toml
nod-proto-ffi/: Cargo.toml
nod-proto-ffi/src/: lib.rs
nod-proto/src/: attestation.rs  decision.rs  lib.rs  notification.rs  request.rs  signing.rs
scripts/: generate-types.sh
server/nod-apns-relay/: .dockerignore  Cargo.toml  Dockerfile  README.md  secrets.example.env
server/nod-apns-relay/secrets/: .gitignore
server/nod-apns-relay/src/: config.rs  error.rs  lib.rs  main.rs  relay.rs  tls.rs
server/nod-apns-relay/src/apns/: auth.rs  client.rs  mod.rs  payload.rs
server/nod-apns-relay/tests/: mtls.rs
server/nod-apns-relay/tests/fixtures/mtls/: README.md  generate
server/nod-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  config.example.toml  docker-compose.apns-relay.yml  docker-compose.dev.yml  docker-compose.yml  secrets.example.env  update-server.sh
server/nod-server/assets/: admin.html
server/nod-server/crates/nod-server/: Cargo.toml
server/nod-server/crates/nod-server/src/: admin.rs  api.rs  apns_relay.rs  audit.rs  auth.rs  config.rs  db.rs  device_attestation.rs  error.rs  lib.rs  main.rs  models.rs  push.rs  services.rs  signing.rs  state.rs  sync.rs  views.rs
server/nod-server/crates/nod-server/src/api/: admin_endpoints.rs  device_endpoints.rs  requests.rs  responses.rs  sync_socket.rs
server/nod-server/crates/nod-server/src/assets/: admin.html
server/nod-server/crates/nod-server/src/config/: environment.rs  file.rs
server/nod-server/crates/nod-server/src/db/: channels.rs  connection.rs  device_attestations.rs  devices.rs  enrollment.rs  issuer_tokens.rs  requests.rs  rows.rs  schema.sql  sources.rs  subscriptions.rs  users.rs  validation.rs
server/nod-server/crates/nod-server/src/db/requests/: create.rs  decisions.rs  maintenance.rs  read.rs  rows.rs
server/nod-server/crates/nod-server/src/models/: admin.rs  attestation.rs  channel.rs  delivery.rs  device.rs  issuer.rs  request.rs  source.rs  sync.rs  user.rs
server/nod-server/crates/nod-server/src/services/: devices.rs  requests.rs
server/nod-server/crates/nod-server/tests/: api.rs  e2e_smoke.rs
server/nod-server/crates/nod-server/tests/api/: admin.rs  cleanup.rs  devices.rs  issuer.rs  recipients.rs  requests.rs  support.rs
server/nod-server/crates/nod-server/tests/fixtures/relay-tls/: README.md  generate
server/nod-server/docs/: API.md
server/nod-server/examples/: issuer.py
server/nod-server/scripts/: nod-compose  nod-dev  nod-relay-init  nod-smoke
tasks/: T-001.md  T-002.md  T-003.md  T-004.md  T-005.md  T-006.md  T-007.md  T-008.md  T-009.md  T-010.md  T-011.md  T-012.md  T-013.md  T-014.md
(+41 files in other folders)
