[package]
name = "nod-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# Wire types + the canonical decision-signing crypto (request_digest,
# decision_signing_payload, and P-256 sign/verify). Pure-Rust p256 is chosen
# over ring so this crate cross-compiles cleanly into the Apple clients via
# UniFFI. See the session task list and ARCHITECTURE_NOTES.md.
[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
# Inert annotation crate: marks the wire types so the `typeshare` CLI can emit
# the Swift + TypeScript definitions. Expands to nothing at runtime.
typeshare = "1.0"
