[package]
name = "nod-client-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
futures-util = "0.3"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
nod-proto = { workspace = true }
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
typeshare = "1.0"
tokio = { version = "1.48", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
