[package]
name = "nod-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "nod_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nod-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
nod-client-core = { path = "../../nod-client-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Data_Xml_Dom",
  "UI_Notifications",
  "Foundation"
] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
