[package]
name = "nod-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
# The crate gates Apple's development AAGUID behind this feature; our verifier
# still enforces the configured development/production environment explicitly.
appattest = { version = "0.1", features = ["testing"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
futures-util = "0.3"
hex = "0.4"
nod-proto = { workspace = true }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v4", "v7"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.14"
